# experiments

./: .gitignore  README.md  batch_local.py  pyproject.toml  setup.py  test_experiments.ipynb
examples/: exists_demo.py  multistage_training.py  skip_conditions_demo.py
examples/olmo/: gridsearch.py  olmo_config.py
examples/random_files/: create_random_files.py  run_random_files.py
experiments/: __init__.py  analysis.py  artifact.py  batch.py  cli.py  config.py  executor.py  experiments.py  project.py  runlib.py  utils.py
experiments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
experiments/scripts/: __init__.py  batch_local.py  batch_runner.py  interactive.py  jobattach.py  jobcat.py  jsonl_viewer.py  rightnow.py  token_viewer.py
notes/: artifact_batch_plan.md
spec/: __init__.md  analysis.md  artifact.md  batch_local.md  cli.md  config.md  executor.md  interactive.md  jobattach.md  jobcat.md  jsonl_viewer.md  project.md  rightnow.md  runlib.md  scripts___init__.md  utils.md
