[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiments"
version = "0.0.1"
description = "Lightweight experiment staging primitives (artifacts, tasks, executors)"
readme = "README.md"
authors = [
  { name = "Jacob Springer" }
]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["pyyaml"]

[project.scripts]
jobcat = "experiments.scripts.jobcat:main"
jobattach = "experiments.scripts.jobattach:main"

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["experiments*"]
exclude = ["examples*"]
